--- a/ngSite/packages.config
+++ b/ngSite/packages.config
@@ -7,9 +7,12 @@
   <package id="bootstrap" version="3.1.1" targetFramework="net45" />
   <package id="FontAwesome" version="4.1.0" targetFramework="net45" />
   <package id="HotTowel.Angular" version="2.3.3" targetFramework="net45" />
+  <package id="Jasmine.Net" version="0.1.3" targetFramework="net45" />
   <package id="jasmine-js" version="1.3.1.1" targetFramework="net45" />
+  <package id="JasmineTest" version="2.0.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="Moment.js" version="2.6.0" targetFramework="net45" />
+  <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="Spin.js" version="2.0" targetFramework="net45" />
   <package id="toastr" version="2.0.3" targetFramework="net45" />
 </packages>
